--- a/svo_ros/CMakeLists.txt
+++ b/svo_ros/CMakeLists.txt
@@ -4,7 +4,7 @@ cmake_minimum_required(VERSION 2.8.3)
 find_package(catkin_simple REQUIRED)
 find_package(rostest REQUIRED)
 catkin_simple()
-find_package(OpenCV REQUIRED)
+find_package(OpenCV 3 REQUIRED)
 
 include(SvoSetup)
 
