Adaptations to run on 20.04 & Noetic.

--- a/dvs_bootstrapping/CMakeLists.txt
+++ b/dvs_bootstrapping/CMakeLists.txt
@@ -13,6 +13,9 @@ include_directories(${OpenCV_INCLUDE_DIRS})
 find_package(PCL 1.7 REQUIRED)
 include_directories(${PCL_INCLUDE_DIRS})
 
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 SET(CMAKE_BUILD_TYPE RelWithDebInfo) # Release, RelWithDebInfo
 ADD_DEFINITIONS(
     -std=c++11
