--- a/dvs_mapping/CMakeLists.txt
+++ b/dvs_mapping/CMakeLists.txt
@@ -4,6 +4,8 @@ cmake_minimum_required(VERSION 2.8.3)
 find_package(catkin_simple REQUIRED)
 catkin_simple(ALL_DEPS_REQUIRED)
 
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 SET(CMAKE_BUILD_TYPE RelWithDebInfo) # Release, RelWithDebInfo
 ADD_DEFINITIONS(
     -std=c++11
