--- a/svo_ros/CMakeLists.txt
+++ b/svo_ros/CMakeLists.txt
@@ -4,9 +4,12 @@ cmake_minimum_required(VERSION 2.8.3)
 find_package(catkin_simple REQUIRED)
 find_package(rostest REQUIRED)
 catkin_simple()
-find_package(OpenCV 3 REQUIRED)
+find_package(OpenCV 4 REQUIRED)
 
 include(SvoSetup)
+
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(USE_GTSAM false)
 
