--- a/svo_ros/CMakeLists.txt
+++ b/svo_ros/CMakeLists.txt
@@ -1,10 +1,13 @@
 project(svo_ros)
 cmake_minimum_required(VERSION 2.8.3)
 
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 find_package(catkin_simple REQUIRED)
 find_package(rostest REQUIRED)
 catkin_simple()
-find_package(OpenCV 3 REQUIRED)
+find_package(OpenCV REQUIRED)
 
 include(SvoSetup)
 
