--- a/dvs_bootstrapping/CMakeLists.txt
+++ b/dvs_bootstrapping/CMakeLists.txt
@@ -1,6 +1,9 @@
 project(dvs_bootstrapping)
 cmake_minimum_required(VERSION 3.0.2)
 
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 find_package(catkin_simple REQUIRED)
 catkin_simple(ALL_DEPS_REQUIRED)
 
