--- a/dvs_mapping/CMakeLists.txt
+++ b/dvs_mapping/CMakeLists.txt
@@ -1,5 +1,7 @@
 project(dvs_mapping)
 cmake_minimum_required(VERSION 2.8.3)
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(catkin_simple REQUIRED)
 catkin_simple(ALL_DEPS_REQUIRED)
