--- a/dvs_reconstruction/CMakeLists.txt
+++ b/dvs_reconstruction/CMakeLists.txt
@@ -1,6 +1,9 @@
 project(dvs_reconstruction)
 cmake_minimum_required(VERSION 2.8.3)
 
+set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 find_package(catkin_simple REQUIRED)
 catkin_simple(ALL_DEPS_REQUIRED)
 
